First draft of required changes for PITR.

--- a/templates/etc/postgresql/PG_VERSION/main/postgresql.conf.template
+++ b/templates/etc/postgresql/PG_VERSION/main/postgresql.conf.template
@@ -30,12 +30,14 @@ shared_buffers = 128MB
 # WRITE AHEAD LOG
 #------------------------------------------------------------------------------
 
+archive_mode = on
+archive_command = '/bin/sh __ARCHIVE_COMMAND__ "%p" "%f" || /bin/sh __PDNOTIFY_COMMAND__'
 
 #------------------------------------------------------------------------------
 # REPLICATION
 #------------------------------------------------------------------------------
 
-wal_level = hot_standby
+wal_level = replica
 max_wal_senders = 3
 wal_keep_segments = 8
 hot_standby = on
@@ -47,7 +49,6 @@ checkpoint_segments = 8  # __NOT_IF_PG_9.5__  __NOT_IF_PG_9.6__ __NOT_IF_PG_10__
 #------------------------------------------------------------------------------
 # QUERY TUNING
 #------------------------------------------------------------------------------
-
 
 #------------------------------------------------------------------------------
 # ERROR REPORTING AND LOGGING
