--- a/templates/etc/postgresql/PG_VERSION/main/postgresql.conf.template
+++ b/templates/etc/postgresql/PG_VERSION/main/postgresql.conf.template
@@ -31,13 +31,13 @@ shared_buffers = 128MB
 #------------------------------------------------------------------------------
 
 archive_mode = on
-archive_command = '/bin/bash __ARCHIVE_COMMAND__ "%p" "%f"'
+archive_command = '/bin/bash /usr/bin/archive.sh "%p" "%f"'
 
 #------------------------------------------------------------------------------
 # REPLICATION
 #------------------------------------------------------------------------------
 
-wal_level = replica
+wal_level = hot_standby
 max_wal_senders = 3
 wal_keep_segments = 8
 hot_standby = on
